# Ditto

./: .clang-format  CMakeLists.txt  Makefile  README.md
cli/: cli.c  cli.h
compiler/: compiler.c  compiler.h
examples/: manager.di
gc/: gc.c  gc.h
include/: common.h  unicodeUtf8.c  unicodeUtf8.h  utils.c  utils.h
lexer/: lexer.c  lexer.h
object/: class.c  class.h  header_obj.c  header_obj.h  meta_obj.c  meta_obj.h  obj_fn.c  obj_fn.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h  obj_range.c  obj_range.h  obj_string.c  obj_string.h  obj_thread.c  obj_thread.h
vm/: core.c  core.h  core.script.inc  opcode.inc  vm.c  vm.h
